Archive2/97/6655406450e48d/output
main.cpp:10:36: error: expected nested-name-specifier before 'TValue'
     TValue& get(Base::Key<typename TValue> base_key) {
                                    ^
main.cpp:10:36: error: expected '(' before 'TValue'
main.cpp:10:36: error: expected ')' before 'TValue'
main.cpp:10:54: error: expected ';' before '{' token
     TValue& get(Base::Key<typename TValue> base_key) {
                                                      ^
main.cpp:13:5: error: data member 'get' cannot be a member template
     }
     ^
main.cpp: In function 'int main()':
main.cpp:28:23: error: 'struct FruitMap' has no member named 'get'
   int apple_value = f.get(FruitMap.Apple);
                       ^
main.cpp:28:35: error: expected primary-expression before '.' token
   int apple_value = f.get(FruitMap.Apple);
                                   ^
main.cpp:28:7: warning: unused variable 'apple_value' [-Wunused-variable]
   int apple_value = f.get(FruitMap.Apple);
       ^
